--- a/css/rental.css
+++ b/css/rental.css
@@ -187,11 +187,11 @@
 .rental .rental_right .result_house .house_card{
     border: 1px solid #B3B6B7;
     width: 100%;
+    height: 350px;
     margin-top: 20px;
     position: relative;
-    height: 350px;
     border-radius: 6px;
-    overflow: hidden;
+/*    overflow: hidden;*/
     cursor: pointer;
 }
 
@@ -283,6 +283,13 @@
     cursor: pointer;
 }
 
+.rental .rental_right .rental_single_house .btn_container .back_btn:hover{
+    background-color: #60C9C2;
+    color: white;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
 .rental .rental_right .rental_single_house .btn_container .fav_btn{
     display: flex;
     flex-direction: row;
@@ -292,13 +299,13 @@
     border-radius: 3px;
     padding: 6px 12px 6px 16px;
     margin-right: 5px;
-    cursor: pointer;
 }
 
 .rental .rental_right .rental_single_house .btn_container .fav_btn:hover{
     background-color: #60C9C2;
     color: white;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 .rental .rental_right .rental_single_house .btn_container .fav_btn .fav_img{
@@ -338,8 +345,6 @@
     left: 0px;
     bottom: 0px;
     cursor: pointer;
-    
-    
 }
 
 .rental .rental_right .rental_single_house .single_house_img .single_left_container:hover{
@@ -510,7 +515,10 @@
     cursor: pointer;
 }
 .rental .rental_right .rental_single_house .single_house_more > p:hover{
-    background-color: #DFF4F3;
+    background-color: #60C9C2;
+    color: white;
+    border: 1px solid black;
+    cursor: pointer;
 }
 
 @media(max-width: 991px){
@@ -548,14 +556,14 @@
     }
     
     .rental .rental_right .result_house .house_card .house_img{
-        padding-bottom: 0;
         width: 240px;
-         padding-bottom: 0%;
+        padding-bottom: 0%;
     }
     
     .rental .rental_right .result_house .house_card .house_detail{
         bottom: 0px;
         margin: 0px 6px;
+/*        width: 100%;*/
     }
     
     .rental .rental_right .result_house .house_card .house_detail .price_icons{
@@ -566,6 +574,77 @@
         font-size: 1.6em;
         color: black;
         text-shadow: none;
+    }
+    
+    /* rental single house css */
+    .rental .rental_right .rental_single_house{
+        width: 100%;
+    }
+
+    .rental .rental_right .rental_single_house .btn_container{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin: 16px 8px;
+    }
+
+    .rental .rental_right .rental_single_house .btn_container .fav_btn{
+        padding: 4px 12px 4px 16px;
+        margin-right: 0px;
+    }
+
+    /* single house img css*/
+    .rental .rental_right .rental_single_house .single_house_img_container{
+        padding: 0px -8px;
+        margin: 0;
+    }
+    
+    .rental .rental_right .rental_single_house > div{
+        margin: 0 8px;
+    }
+
+    .rental .rental_right .rental_single_house .single_price_address .single_price{
+        font-size: 2em;
+    }
+}
+
+@media(max-width: 768px){
+    .rental .rental_right .rental_filter{
+        width: 100%;
+        padding: 0px;
+    }
+
+    .rental .rental_right .rental_filter .filter_type .filter_title{
+        width: 18%;
+        margin: 8px;
+        font-size: 0.9em;
+    }
+    
+    .rental .rental_right .rental_filter .filter_type .filter_detail{
+        font-size: 0.8em;
+    }
+    
+    
+    .rental .rental_right .result_house .house_card{
+        height: 120px;
+    }
+    
+    .rental .rental_right .result_house .house_card .house_img{
+        width: 120px;
+    }
+    
+    .rental .rental_right .result_house .house_card .house_detail > p{
+        font-size: 0.9em;
+        margin: 0 8px;
+    }
+    
+    .rental .rental_right .result_house .house_card .house_detail .price_icons{
+        width: 100%;  
+    }
+
+    .rental .rental_right .result_house .house_card .house_detail .price_icons .price{
+        font-size: 1em; 
     }
     
     /* rental single house css */
