--- a/css/common.css
+++ b/css/common.css
@@ -364,6 +364,8 @@ body{
 
 /* footer css */
 .footer{
+    position: relative;
+    top: 60px;
     width: 100%;
     height: 60px;
     background-color: #ececec;
