--- a/css/login.css
+++ b/css/login.css
@@ -96,13 +96,13 @@ login layout css
     cursor: pointer;
 }
 
-/* alert box css */
+/* alert box css
 .alert_box_layout{
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
     position: fixed;
-    z-index: 300;
+    z-index: 1000;
     top:0;
 
     display: none;
@@ -144,4 +144,4 @@ login layout css
 
 .alert_box_layout .alert_box .alert_btn:hover{
     cursor: pointer;
-}
+} */
