--- a/css/common.css
+++ b/css/common.css
@@ -372,7 +372,7 @@ body{
 }
 
 /* login layout css */
-.log_layout_container{
+/* .log_layout_container{
     width: 100%;    
     height: 100%;
     background-color: rgba(192, 192, 192, 0.3);
@@ -394,7 +394,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-/*    align-items: center;*/
 }
 
 .log_layout_container .log_layout .login_input_container{
@@ -467,7 +466,7 @@ body{
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
 
 /* alert box css */
